<resources>
    <string name="app_name">BBM</string>
    <string name="title_activity_info_beer">Info on the selected beer</string>
    <string name="beer_name">Beer name: </string>
    <string name="beer_type">Type: </string>
    <string name="beer_brewery">Brewery: </string>
    <string name="beer_webaddress">Web address: </string>
    <string name="beer_fermentation">Fermentation: </string>
    <string name="beer_color">Color: </string>
    <string name="beer_ibu">Ibu: </string>
    <string name="beer_glass">Glass: </string>
    <string name="beer_volume">Volume: </string>

    <string name="beer_search">Search for name...</string>
    <string name="beer_hint">Beer name...</string>
    <string name="title_activity_maps">Map</string>
    <string name="action_brewerymap">Breweries Map</string>

    <string name="title_radius_dialog">Radius List</string>

    <array name="radius_list">
        <item>10 km</item>
        <item>20 km</item>
        <item>30 km</item>
        <item>40 km</item>
    </array>

    <string name="search_hint">Enter partial or full beer\'s name</string>

</resources>
