<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context="unisannio.ingsoft.bbm.MainActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="73dp">


    <LinearLayout
        android:id="@+id/progressbar_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:orientation="vertical" >

            <ProgressBar
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/progressBar" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/progressBar"
                android:layout_gravity="center_vertical|center_horizontal"
                android:text="Loading data..." />
        </LinearLayout>


    </LinearLayout>


    <TextView
        android:id="@+id/beer_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/beer_name"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/beer_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/beer_name"
        android:text="@string/beer_type"
        android:textSize="18sp" />


    <TextView
        android:id="@+id/beer_fermentation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/beer_type"
        android:layout_centerHorizontal="true"
        android:text="@string/beer_fermentation"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/beer_volume"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/beer_fermentation"
        android:layout_centerHorizontal="true"
        android:text="@string/beer_volume"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/beer_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/beer_volume"
        android:layout_centerHorizontal="true"
        android:text="@string/beer_color"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/beer_ibu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/beer_color"
        android:layout_centerHorizontal="true"
        android:text="@string/beer_ibu"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/beer_glass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/beer_ibu"
        android:layout_centerHorizontal="true"
        android:text="@string/beer_glass"
        android:textSize="18sp" />
</RelativeLayout>